# vinsly-desktop

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  PRIVACY.md  README.md  TODO-LAUNCH.md  TODO-Soon.md  TODO.md  UPDATES.md  index.html  jest.config.cjs  package-lock.json  package.json  tailwind.config.js
.claude/agents/: cool-guy.md  front-end-designer.md
.github/workflows/: build.yml  test.yml
docs/: DEVELOPMENT.md  RELEASE_CHECKLIST.md  TAURI_COMMANDS.md  UPDATER_SETUP.md  app-refactor-guide.md  desktop-license-auth.md  full-disk-access-guide.md  improvement-plan.md  lib-rs-refactoring-guide.md  licensing-onboarding.md  phase-2-completion-summary.md  phase-2-duplicate-refactor-example.md  phase-2-implementation-examples.md  phase-2-incremental-refactoring.md  resource-system-migration.md  undo-redo-integration.md
license-server/: .env  .env.example  README.md  package-lock.json  package.json  schema.sql
license-server/src/: db.ts  index.ts
scripts/: build-scan-helper.mjs  reset-user-data.mjs  run-tauri.mjs
src/: App.tsx  animations.ts  constants.ts  index.css  main.tsx  setupTests.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: session-control.toml
src-tauri/src/: lib.rs  main.rs  scanner.rs  terminal.rs
src/components/: ActivationModal.tsx  AgentGridCard.tsx  AgentListItem.tsx  AgentPreviewCard.tsx  AgentSidebar.tsx  AppContent.tsx  AppKeyboardShortcuts.tsx  AppScreenRouter.tsx  AppShell.tsx  AppUpdateManager.tsx  ChangeLicenseModal.tsx  CodeEditor.tsx  ConfirmDialog.tsx  DocsPanel.tsx  EnvVarPreview.tsx  ErrorBoundary.tsx  FeedbackModal.tsx  GuidedTour.tsx  Header.tsx  KeyboardShortcutsPanel.tsx  NavigationTabs.tsx  ProjectFolderModal.tsx  ReleaseNotes.tsx  ResourceListItem.tsx  ScanModal.tsx  SessionIndicator.tsx  SessionPanel.tsx  SettingsModal.tsx  SplashScreen.tsx  Toast.tsx  TourTooltip.tsx  UnsavedChangesDialog.tsx  UpdateAvailableModal.tsx  UpdateCompleteModal.tsx  UpdatePrompt.tsx  WelcomeModal.tsx
src/config/: resourceConfig.ts
src/contexts/: AppBootstrapContext.tsx  AppStateContext.tsx  LicenseContext.tsx  NavigationContext.tsx  TerminalContext.tsx  ToastContext.tsx  UpdateContext.tsx  WorkspaceContext.tsx
src/hooks/: index.ts  useAgentHandlers.ts  useAutoSave.ts  useCacheManager.ts  useClaudeMemory.ts  useClaudeMemoryList.ts  useClaudeSessions.ts  useFormDirty.ts  useHistory.ts  useHooks.ts  useKeyboardShortcuts.ts  useLicense.ts  useMCPAuth.ts  useMCPHealth.ts  useMCPServers.ts  (+14 more)
(+127 files in other folders)
