[package]
name = "vinsly"
version = "1.0.0"
description = "Vinsly - Agent Studio for Claude Code"
authors = ["Vinsly"]
edition = "2021"
default-run = "vinsly"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vinsly_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "scan-helper"
path = "src/bin/scan_helper.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5.0"
tokio = { version = "1", features = ["full"] }
walkdir = "2.5"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
sysinfo = { version = "0.30", default-features = false }
window-vibrancy = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
